--- a/register.html
+++ b/register.html
@@ -8,7 +8,8 @@
     <body>
         <h1> Regitration was yet to done</h1>
         <h2> All fields are Mandatory</h2>
-        <form class="" action="thankyou.html" method="post">
+
+        <form action="thankyou.html" method="post">
             <label for="name">Enter the name:</label>
             <input id="name" type="text" name="username" pattern=".{5,10}" title="min 5 and max 10 characters" placeholder="Enter the name ra shorttu" required> <br> <br>
             <label for="mail">Enter the mailID:</label>
@@ -60,16 +61,7 @@
             <input type="submit" name="" value="Register">
 
 
-
-
-
-
-
-
-
-
-
         </form>
-
+        
     </body>
 </html>
